--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import "styles/main.scss";
+
+html,
+body {
+  height: 100%;
+  background-color: rgba(243, 237, 245, 0.911);
+}
